# c-dersler

./: CMakeLists.txt  main.c
